--- a/app/src/main/res/layout/fragment_gastos.xml
+++ b/app/src/main/res/layout/fragment_gastos.xml
@@ -1,22 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:background="@color/colorWhite"
+    android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".GastosFragment">
+    android:padding="36dp"
+    tools:context=".ui.GastosFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Gastos"
+        android:text="@string/btn_cadastrar"
         android:textColor="@color/colordetail"
-        android:textSize="49sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="25dp"
+        android:layout_marginBottom="30dp"
+        android:layout_gravity="center"
+        android:layout_height="wrap_content"
+        android:textSize="28sp"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/ed1"
+            android:backgroundTint="@color/colorAccent"
+            android:layout_marginBottom="14dp"
+            android:padding="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/til_username" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/ed2"
+            android:layout_width="match_parent"
+            android:backgroundTint="@color/colorAccent"
+            android:layout_marginBottom="14dp"
+            android:padding="16dp"
+            android:layout_height="wrap_content"
+            android:hint="@string/til_username" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/ed3"
+            android:layout_width="match_parent"
+            android:backgroundTint="@color/colorAccent"
+            android:layout_marginBottom="14dp"
+            android:padding="16dp"
+            android:layout_height="wrap_content"
+            android:hint="@string/til_username" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/ed4"
+            android:layout_width="match_parent"
+            android:backgroundTint="@color/colorAccent"
+            android:layout_marginBottom="14dp"
+            android:padding="16dp"
+            android:layout_height="wrap_content"
+            android:hint="@string/til_username" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <Button
+        android:layout_marginTop="40dp"
+        android:layout_width="match_parent"
+        android:textColor="@color/colorWhite"
+        android:text="@string/btn_cadastrar"
+        android:layout_height="wrap_content"
+        android:background="@drawable/round_login_button"/>
+
+
+
+
+</LinearLayout>
